fix(guides) Horizontal spacing between guide rows

--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -204,6 +204,7 @@ h2:after {
   background: #fff;
   text-align: center;
   height: 220px;
+  margin-bottom: 20px;
 }
 
 #ghiduri-section .ghid-content:hover {
